Using more semantic markup

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
+  <header>
+    <nav id="navigation">
+    </nav>
+  </header>
 
-  <section id="navigation">
-  </section>
-
-  <section id="content">
-
-    <div id="bio">
+  <main id="content">
+    <section id="bio">
       <img src="uploads/me.jpg" width="200" height="200" alt="Dan Garland"
       class="bio-image shadowed" />
 
@@ -29,9 +29,9 @@
           Expressing creativity through innovative web development
         </h3>
       </div>
-    </div>
+    </section>
 
-    <div id="projects">
+    <section id="projects">
       <h2>Recent Project Work</h2>
 
       <ul id="project-list">
@@ -109,11 +109,11 @@
         </li>
       </ul>
 
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <section id="footer">
-  </section>
+  <footer id="footer">
+  </footer>
 
   <!-- Load application scripts at the end of the body, so that we
   don't slow up the loading time of the DOM -->
