Created user model

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,9 +12,14 @@
   <script src="spec/javascripts/helpers/jasmine-2.4.1/boot.js"></script>
 
   <!-- TODO: include source files here... -->
+  <script src="app/assets/javascripts/libs/underscore.js"></script>
+  <script src="app/assets/javascripts/libs/backbone.js"></script>
+  <script src="app/assets/javascripts/app.js"></script>
+  <script src="app/assets/javascripts/models/user.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/javascripts/helpers/SpecHelper.js"></script>
+  <script src="spec/javascripts/models/userSpec.js"></script>
 
 </head>
 
