--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   </header>
 
   <main id="content">
-    <section id="bio">
-      <img src="uploads/me.jpg" width="200" height="200" alt="Dan Garland"
+    <script id="user-bio-template" type="text/template">
+      <img src="uploads/images.png" width="200" height="200" alt="Dan Garland"
       class="bio-image shadowed" />
 
       <div class="bio-text">
@@ -109,7 +109,7 @@
         </li>
       </ul>
 
-    </section>
+    </script>
   </main>
 
   <footer id="footer">
