--- a/public/index.html
+++ b/public/index.html
@@ -14,22 +14,18 @@
   </header>
 
   <main id="content">
-    <script id="user-bio-template" type="text/template">
-      <img src="uploads/images.png" width="200" height="200" alt="Dan Garland"
-      class="bio-image shadowed" />
+  <script id="user-bio-template" type="text/template">
+    <img src="<%= model.get("imageUrl") %>" width="200" height="200" alt="<%= model.fullName() %>"
+    class="bio-image shadowed" />
 
-      <div class="bio-text">
-        <h1 class="name">Dan Garland</h1>
+    <div class="bio-text">
+      <h1 class="name"><%= model.fullName() %></h1>
 
-        <h2 class="bio">
-          Freelance Ruby on Rails developer from London, UK
-        </h2>
+      <h2 class="bio"><%= model.attributes.bio %></h2>
 
-        <h3 class="mission">
-          Expressing creativity through innovative web development
-        </h3>
-      </div>
-    </section>
+      <h3 class="mission"><%= model.get("mission") %></h3>
+
+  </script>
 
     <section id="projects">
       <h2>Recent Project Work</h2>
@@ -122,6 +118,11 @@
   <script src="../app/assets/javascripts/libs/backbone.js"></script>
   <script src="../app/assets/javascripts/libs/backbone.localStorage.js"></script>
   <script src="../app/assets/javascripts/app.js"></script>
+  <!-- TODO: include source files here... -->
+  <script src="../app/assets/javascripts/models/user.js"></script>
+  <script src="../app/assets/javascripts/views/userView.js"></script>
+
+  <script src="../app/assets/javascripts/boot.js"></script>
 </body>
 
 </html>
