Added UserList collection and Show page

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -43,11 +43,18 @@
     <script src="app/assets/javascripts/app.js"></script>
     <script src="app/assets/javascripts/models/user.js"></script>
     <script src="app/assets/javascripts/views/userView.js"></script>
+    <script src="app/assets/javascripts/views/homeView.js"></script>
+    <script src="app/assets/javascripts/controllers/usersController.js"></script>
+    <script src="app/assets/javascripts/collections/userList.js"></script>
+    <script src="app/assets/javascripts/views/userListView.js"></script>
+    <script src="app/assets/javascripts/views/userShowView.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/javascripts/helpers/SpecHelper.js"></script>
     <script src="spec/javascripts/models/userSpec.js"></script>
     <script src="spec/javascripts/views/userViewSpec.js"></script>
+    <script src="spec/javascripts/views/userListViewSpec.js"></script>
+    <script src="spec/javascripts/views/userShowViewSpec.js"></script>
 
   </head>
 
