--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,26 @@
       </div>
 
     </script>
+    
+    <script id="new-user-template" type="text/template">
+      <div>
+	<h1>Add A New User</h1>
+	<form action ="" id="new-user-form">
+	  <strong>First Name:</strong>
+	  <input type="text" placeholder="First Name" id="firstName" value="" data-field-name="firstName">
+	  <strong>Last Name:</strong>
+	  <input type="text" placeholder="Last Name" id="lastName" value="" data-field-name="lastName">
+	  <strong>Image URL:</strong>
+	  <input type="text" placeholder="Image URL" id="imageUrl" value="" data-field-name="imageUrl">
+	  <strong>Biography:</strong>
+	  <input type="text" placeholder="Biography" id="bio" value="" data-field-name="bio">
+	  <strong>Mission:</strong>
+	  <input type="text" placeholder="Mission" id="mission" value="" data-field-name="mission">
+	  <input type="submit" value="submit" class="submit">
+	</form>
+      </div>
+
+    </script>
 
     <script type="text/template">
 
@@ -140,6 +160,7 @@
   <script src="../app/assets/javascripts/controllers/usersController.js"></script>
   <script src="../app/assets/javascripts/views/userListView.js"></script>
   <script src="../app/assets/javascripts/views/userShowView.js"></script>
+  <script src="../app/assets/javascripts/views/userNewView.js"></script>
   <script src="../app/assets/javascripts/boot.js"></script>
 
 </body>
