--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -33,25 +33,81 @@
 	</h3>
       </div>
 
+      <div class="user-projects">
+      </div>
+
     </script>
 
     <script id="new-user-template" type="text/template">
       <div>
 	<h1>Add A New User</h1>
 	  <strong>First Name:</strong>
-	  <input type="text" placeholder="First Name" id="firstName" value="" data-field-name="firstName">
-	  <strong>Last Name:</strong>
-	  <input type="text" placeholder="Last Name" id="lastName" value="" data-field-name="lastName">
-	  <strong>Image URL:</strong>
-	  <input type="text" placeholder="Image URL" id="imageUrl" value="" data-field-name="imageUrl">
-	  <strong>Biography:</strong>
-	  <input type="text" placeholder="Biography" id="bio" value="" data-field-name="bio">
-	  <strong>Mission:</strong>
-	  <input type="text" placeholder="Mission" id="mission" value="" data-field-name="mission">
-	  <input type="submit" value="submit" class="submit">
+	  <form action="" id="add-new-user">
+	    <input type="text" placeholder="First Name" id="firstName" value="" data-field-name="firstName">
+	    <strong>Last Name:</strong>
+	    <input type="text" placeholder="Last Name" id="lastName" value="" data-field-name="lastName">
+	    <strong>Image URL:</strong>
+	    <input type="text" placeholder="Image URL" id="imageUrl" value="" data-field-name="imageUrl">
+	    <strong>Biography:</strong>
+	    <input type="text" placeholder="Biography" id="bio" value="" data-field-name="bio">
+	    <strong>Mission:</strong>
+	    <input type="text" placeholder="Mission" id="mission" value="" data-field-name="mission">
+	    <input type="submit" value="submit" class="submit">
+	  </form>
       </div>
 
     </script>
+
+    <script type="text/template" id="project-list">
+      <section>
+	<h2>Recent Project Work</h2>
+	<span id="new-project">Add a new project</span>
+	<ul class="sortable">
+	</ul>
+      </section>
+    </script>
+
+    <script type="text/template" class="project">
+      <li>
+	<div class="info">
+	  <img src="<%= model.get("imageUrl")  %>" width="350" height="165"
+	  alt="<%= model.get("title") %>" class="project-image shadowed" />
+
+	  <div class="project-details">
+	    <h3 class="project-name"><%= model.get("title") %></h3>
+	    <input class="edit-title hidden-edit" placeholder="Enter a title">
+
+	    <a href="<%= model.get("repoUrl") %>"><%= model.get("repoUrl") %></a>
+
+	    <div class="body"><%= model.get("body") %></div>
+
+	    <div class="remove-project">
+	      Remove Project
+	    </div>
+	    <div class="clear"></div>
+	  </div>
+	</div>
+      </li>
+    </script>
+    
+    <script id="new-project-template" type="text/template">
+      <div>
+	<h1>Add A New Project</h1>
+	<form action="" id="add-new-project">
+	  <strong>Title:</strong>
+	  <input type="text" placeholder="Title" id="title" value="" data-field-name="title">
+	  <strong>Repo URL:</strong>
+	  <input type="text" placeholder="Repo URL" id="repoUrl" value="" data-field-name="repoUrl">
+	  <strong>Image URL:</strong>
+	  <input type="text" placeholder="Image URL" id="imageUrl" value="" data-field-name="imageUrl">
+	  <strong>Body:</strong>
+	  <input type="text" placeholder="Body" id="body" value="" data-field-name="body">
+	  <input type="submit" value="submit" class="submit">
+	</form>
+      </div>
+
+    </script>
+
 
     <!-- TODO: include source files here... -->
     <script src="app/assets/javascripts/libs/underscore.js"></script>
@@ -59,6 +115,8 @@
     <script src="app/assets/javascripts/libs/backbone.js"></script>
     <script src="app/assets/javascripts/libs/backbone.localStorage.js"></script>
     <script src="app/assets/javascripts/app.js"></script>
+    <script src="app/assets/javascripts/models/project.js"></script>
+    <script src="app/assets/javascripts/collections/projectList.js"></script>
     <script src="app/assets/javascripts/models/user.js"></script>
     <script src="app/assets/javascripts/views/userView.js"></script>
     <script src="app/assets/javascripts/views/homeView.js"></script>
@@ -67,6 +125,9 @@
     <script src="app/assets/javascripts/views/userListView.js"></script>
     <script src="app/assets/javascripts/views/userShowView.js"></script>
     <script src="app/assets/javascripts/views/userNewView.js"></script>
+    <script src="app/assets/javascripts/views/projectListView.js"></script>
+    <script src="app/assets/javascripts/views/projectView.js"></script>
+    <script src="app/assets/javascripts/views/projectNewView.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/javascripts/helpers/SpecHelper.js"></script>
@@ -75,6 +136,7 @@
     <script src="spec/javascripts/views/userListViewSpec.js"></script>
     <script src="spec/javascripts/views/userShowViewSpec.js"></script>
     <script src="spec/javascripts/views/userNewViewSpec.js"></script>
+    <script src="spec/javascripts/views/projectViewSpec.js"></script>
 
   </head>
 
