Attempted to add inheritance

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -124,6 +124,7 @@
     <script src="app/assets/javascripts/views/userView.js"></script>
     <script src="app/assets/javascripts/views/homeView.js"></script>
     <script src="app/assets/javascripts/controllers/usersController.js"></script>
+    <script src="app/assets/javascripts/views/editableView.js"></script>
     <script src="app/assets/javascripts/collections/userList.js"></script>
     <script src="app/assets/javascripts/views/userListView.js"></script>
     <script src="app/assets/javascripts/views/userShowView.js"></script>
