--- a/public/index.html
+++ b/public/index.html
@@ -72,29 +72,27 @@
     </script>
 
     <script type="text/template" class="project">
-      <li id="<%= model.get("id") %>" class="sortable">
-	<div class="info">
-	  <img src="<%= model.get("projectImageUrl") %>" width="350" height="165"
-	  alt="<%= model.get("title") %>" class="project-image shadowed" data-field-name="projectImageUrl" />
+      <div class="info">
+	<img src="<%= model.get("projectImageUrl") %> " width="350" height="165"
+	alt="<%= model.get("title") %>" class="project-image shadowed editable" data-field-name="projectImageUrl" />
 
-	  <div class="project-details">
-	    <h3 class="project-name editable"><%= model.get("title") %></h3>
-	    <input class="edit-title hidden-edit" placeholder="Enter a title">
-	    <input type="text" placeholder="Title" class="hidden-edit" value="<%= model.get("title")%>" data-field-name="title">
+	<div class="project-details">
+	  <h3 class="project-name editable"><%= model.get("title") || "Click to add title" %></h3>
+	  <input class="edit-title hidden-edit" placeholder="Enter a title">
+	  <input type="text" placeholder="Title" class="hidden-edit" value="<%= model.get("title")%>" data-field-name="title">
 
-	    <a href="<%= model.get("repoUrl") %>" class="repoUrl editable"><%= model.get("repoUrl") %></a>
-	    <input type="text" placeholder="Repo URL" class="hidden-edit" value="<%= model.get("repoUrl")%>" data-field-name="repoUrl">
+	  <a href="<%= model.get("repoUrl") %>" class="repoUrl editable"><%= model.get("repoUrl") || "Click to add URL" %></a>
+	  <input type="text" placeholder="Repo URL" class="hidden-edit" value="<%= model.get("repoUrl")%>" data-field-name="repoUrl">
 
-	    <div class="body editable"><%= model.get("body") %></div>
-	    <input type="text" placeholder="Body" class="hidden-edit" value="<%= model.get("body")%>" data-field-name="body">
+	  <div class="body editable"><%= model.get("body") || "Click to add body" %></div>
+	  <input type="text" placeholder="Body" class="hidden-edit" value="<%= model.get("body")%>" data-field-name="body">
 
-	    <div class="remove-project">
-	      Remove Project
-	    </div>
-	    <div class="clear"></div>
+	  <div class="remove-project">
+	    Remove Project
 	  </div>
+	  <div class="clear"></div>
 	</div>
-      </li>
+      </div>
     </script>
     
     <script id="new-project-template" type="text/template">
@@ -134,6 +132,7 @@
   <script src="../app/assets/javascripts/views/userView.js"></script>
   <script src="../app/assets/javascripts/views/homeView.js"></script>
   <script src="../app/assets/javascripts/controllers/usersController.js"></script>
+  <script src="../app/assets/javascripts/views/editableView.js"></script>
   <script src="../app/assets/javascripts/views/userListView.js"></script>
   <script src="../app/assets/javascripts/views/userShowView.js"></script>
   <script src="../app/assets/javascripts/views/userNewView.js"></script>
