--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -113,25 +113,7 @@
     </script>
 
     <!-- TODO: include source files here... -->
-    <script src="app/assets/javascripts/libs/underscore.js"></script>
-    <script src="app/assets/javascripts/libs/jquery-3.1.0.js"></script>
-    <script src="app/assets/javascripts/libs/backbone.js"></script>
-    <script src="app/assets/javascripts/libs/backbone.localStorage.js"></script>
-    <script src="app/assets/javascripts/app.js"></script>
-    <script src="app/assets/javascripts/models/project.js"></script>
-    <script src="app/assets/javascripts/collections/projectList.js"></script>
-    <script src="app/assets/javascripts/models/user.js"></script>
-    <script src="app/assets/javascripts/views/userView.js"></script>
-    <script src="app/assets/javascripts/views/homeView.js"></script>
-    <script src="app/assets/javascripts/controllers/usersController.js"></script>
-    <script src="app/assets/javascripts/views/editableView.js"></script>
-    <script src="app/assets/javascripts/collections/userList.js"></script>
-    <script src="app/assets/javascripts/views/userListView.js"></script>
-    <script src="app/assets/javascripts/views/userShowView.js"></script>
-    <script src="app/assets/javascripts/views/userNewView.js"></script>
-    <script src="app/assets/javascripts/views/projectListView.js"></script>
-    <script src="app/assets/javascripts/views/projectView.js"></script>
-    <script src="app/assets/javascripts/views/projectNewView.js"></script>
+    <script src="/assets/application.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/javascripts/helpers/SpecHelper.js"></script>
